Document new API endpoint
